# Ps5-to-Xbox

./: .gitignore  README.md  find-python.cmd  install.cmd  list-devices.cmd  pyproject.toml  requirements.txt  run.cmd  test.cmd
src/ps5_to_xbox/: __init__.py  bridge.py  cli.py  dualsense.py  hid_reader.py  mapping.py  xbox.py
tests/: test_dualsense.py
